# wb-mqtt-bridge

./: .contract-guard.toml  .dockerignore  .gitignore  .repin.toml  .scope-guard.toml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  TODO.md  debug.py  deploy.sh  deploy_local.sh  deploy_remote.sh  device_test_cli.py  docker-compose.yml  docker_deploy.sh  extract_lg_tv_cert.py  manage_docker.sh  mqtt_sniffer.py  openapi.json  pyproject.toml  requirements.txt  requirements_dev.txt  scp_wb_rules.sh  setup.py  test_LGTV_living.ipynb  test_broadlink.ipynb
backend/: .dockerignore  .env.example  Dockerfile  README.md  openapi.json  pyproject.toml  pyrightconfig.json
backend/config/: device-state-mapping.json  rooms.json  system.json  topology.json
backend/config/capabilities/classes/: AppleTVDevice.json  AuralicDevice.json  BroadlinkKitchenHood.json  EMotivaXMC2.json  LgTv.json  MitsubishiHvac.json  RevoxA77ReelToReel.json
backend/config/capabilities/devices/: cabinet_spots.json  video.json
backend/config/capabilities/profiles/: cover.json  dimmable_light.json  heating_loop.json  hvac.json  light_switch.json  rgb_light.json  seasonal_mode.json
backend/config/devices/: appletv_children.json  appletv_living.json  bedroom_hvac.json  emotiva_xmc2.json  kitchen_hood.json  ld_player.json  lg_tv_children.json  lg_tv_living.json  living_room_hvac.json  mf_amplifier.json  reel_to_reel.json  streamer.json  upscaler.json  vhs_player.json  video.json
backend/config/devices/wb-devices/bathroom/: bathroom_floor.json  bathroom_mirror.json  bathroom_shelf_bath.json  bathroom_shelf_toilet.json  bathroom_spots.json
backend/config/devices/wb-devices/bedroom/: bedroom_curtain.json  bedroom_heating.json  bedroom_hvac.json  bedroom_nightstand_left.json  bedroom_nightstand_right.json  bedroom_sconce_left.json  bedroom_sconce_right.json  bedroom_shelves_light.json  bedroom_spots.json  bedroom_window_light.json
backend/config/devices/wb-devices/cabinet/: cabinet_backlight.json  cabinet_floor.json  cabinet_roller_left.json  cabinet_roller_right.json  cabinet_spots.json  cabinet_windowsill.json
backend/config/devices/wb-devices/children_room/: children_room_ceiling_accent.json  children_room_heating.json  children_room_hvac.json  children_room_spots.json
backend/config/devices/wb-devices/entrance/: entrance_cabinet_accent.json  entrance_floor.json  entrance_spots.json
backend/config/devices/wb-devices/global/: all_plugs.json  cleaning_mode.json  home_mode.json  oven_power.json  seasonal_mode.json
backend/config/devices/wb-devices/hall/: hall_spots.json  hall_track_1.json  hall_track_2.json
backend/config/devices/wb-devices/kitchen/: kitchen_backlight.json  kitchen_floor.json  kitchen_spots.json
backend/config/devices/wb-devices/living_room/: living_room_curtain_left.json  living_room_curtain_right.json  living_room_heating.json  living_room_hvac.json  living_room_spots.json  living_room_tulle_right.json  living_room_union_cabinet.json  living_room_window_light.json
backend/config/devices/wb-devices/shower/: shower_floor.json  shower_mirror.json  shower_sauna.json  (+2 more)
backend/config/scenarios/: movie_appletv.json  movie_ld.json  movie_vhs.json  movie_zappiti.json  music_auralic.json  music_reel.json  music_tape.json  music_turntable.json  tv_on_speakers.json
backend/docs/devices/: dvdo_settings.md
backend/docs/maintenance/: parameter_examples.md
backend/src/locveil_bridge/: __version__.py
backend/src/locveil_bridge/app/: bootstrap.py  main.py  reload_service.py
backend/src/locveil_bridge/cli/: broadlink_cli.py  device_test.py  dump_catalog.py  dump_openapi.py  mqtt_sniffer.py
backend/src/locveil_bridge/domain/: __init__.py  ports.py
backend/src/locveil_bridge/utils/: entry_points.py  serialization_utils.py
backend/src/wb_mqtt_bridge/: __init__.py
backend/src/wb_mqtt_bridge/app/: __init__.py  bootstrap.py  main.py
backend/src/wb_mqtt_bridge/cli/: device_test.py  dump_catalog.py  dump_openapi.py
backend/src/wb_mqtt_bridge/domain/: ports.py
backend/src/wb_mqtt_bridge/presentation/: __init__.py
backend/src/wb_mqtt_bridge/utils/: __init__.py  validation.py
backend/tests/: README.md  auto_wrap_devices.py  conftest.py  debug.py  device_test.py  extract_lg_tv_cert.py  mock_sqlite.py  test_config_manager.py  test_dependency_pins.py  test_device_configs.py  test_emotiva_params.py  test_helpers.py  test_integration.py  test_kitchen_hood_parameters.py  test_lg_tv.py  test_persistence_integration.py  test_revox_params.py  test_scenario_api_integration.py  test_scenario_state_persistence.py  test_scenario_switch_reconciler.py  test_wirenboard_ir_params.py
backend/tests/devices/: README.md  test_auralic_device.py  test_auralic_update_task.py
backend/tests/unit/: test_apple_tv_params.py  test_auralic_reconnect.py  test_bootstrap_startup_cleanup.py  test_canonical_endpoint.py  test_canonical_first_phase2.py  test_canonical_sequence.py  test_capabilities.py  test_chokepoint_static.py  test_command_exposure.py  test_contracts_golden.py  test_core_py_pin_identity.py  test_device_class_init_signatures.py  test_device_integration_schema.py  test_device_manager_resilience.py  test_device_state_restore.py  test_docs_manifest.py  test_dual_mode_handlers.py  test_emotiva_notification_path.py  test_force_idempotence.py  test_layout_engine.py  test_layout_manifest.py  test_lg_tv_arc.py  test_lg_tv_health_loop.py  test_lg_tv_params.py  test_logging_setup.py  test_maintenance_guard.py  test_message_handling.py  test_mitsubishi_hvac.py  test_mqtt_client_retained.py  test_mqtt_reconnect.py  test_openapi_schema.py  test_parameter_validation.py  test_reconciler.py  test_reload_service.py  test_report_protocol_pin.py  test_reports.py  test_room_canonical.py  test_room_manager.py  test_rooms_bootstrap.py  test_scenario.py  (+16 more)
backend/tests/unit/wb_oracle/: appletv_children.json  appletv_living.json  emotiva_xmc2.json  kitchen_hood.json  ld_player.json  lg_tv_children.json  lg_tv_living.json  mf_amplifier.json  reel_to_reel.json  streamer.json  upscaler.json  vhs_player.json  video.json
(+774 files in other folders)
