[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wb-mqtt-bridge"
version = "0.1.0"
description = "A Python-based web service that acts as an MQTT client to manage multiple devices using a plugin-based architecture"
readme = "README.md"
authors = [
    {name = "Dmitri Romanovskij", email = "dmitri.romanovski@gmail.com"}
]
# Updated license format to SPDX per deprecation warning
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Home Automation",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.11"
dependencies = [
    # Core web framework
    "fastapi>=0.103.0",
    "uvicorn>=0.23.2",
    # MQTT and core functionality
    "aiomqtt>=1.0.0",
    "pydantic>=2.11.0",
    "python-dotenv>=1.0.0",
    "typing_extensions>=4.7.0",
    "paho-mqtt>=1.6.1",
    # Device-specific libraries (PyPI versions - Phase 1 migration)
    "broadlink>=0.18.0",
    "pymotivaxmc2==0.6.5", # Migrated from Git to PyPI
    "asyncwebostv==0.2.7", # Migrated from Git to PyPI
    "asyncmiele==0.2.6", # Migrated from Git to PyPI
    # Network and HTTP libraries
    "websockets>=15.0.1",
    "pyOpenSSL>=23.2.0",
    "aiohttp>=3.8.1",
    "httpx",
    "requests",
    # Data handling
    "pyyaml>=6.0",
    "jsonschema>=4.4.0",
    "aiosqlite>=0.19.0",
    # Auralic device support (using your Git branch with ARM lxml fix)
    "openhomedevice @ git+https://github.com/droman42/openhomedevice.git@remove-lxml-dependency",
    # Apple TV support (keeping specific commit hash)
    "pyatv @ git+https://github.com/postlund/pyatv.git@f75e718bc0bdaf0a3ff06eb00086f781b3f06347",
    # Note: asyncio>=3.4.3 removed - built into Python 3.11+
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.18.0", 
    "pytest-mock>=3.7.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "mypy>=0.9",
    "flake8>=3.9",
    "pysqlite3-binary>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/droman42/wb-mqtt-bridge"
Issues = "https://github.com/droman42/wb-mqtt-bridge/issues"

[project.scripts]
wb-mqtt-bridge = "app.main:main"

[tool.setuptools]
packages = ["app", "devices"]

# Simplified package structure
[tool.setuptools.package-dir]
"" = "."

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

# UV-specific configuration
[tool.uv]
# Git sources for dependencies
[tool.uv.sources]
pyatv = { git = "https://github.com/postlund/pyatv.git", rev = "f75e718bc0bdaf0a3ff06eb00086f781b3f06347" }
openhomedevice = { git = "https://github.com/droman42/openhomedevice.git", branch = "remove-lxml-dependency" } 