[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wb-mqtt-bridge"
version = "0.5.0"
description = "A Python-based web service that acts as an MQTT client to manage multiple devices using a plugin-based architecture"
readme = "README.md"
authors = [
    {name = "Dmitri Romanovskij", email = "dmitri.romanovski@gmail.com"}
]
# Updated license format to SPDX per deprecation warning
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Home Automation",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.11"
dependencies = [
    # Core web framework
    "fastapi>=0.103.0,<1",
    "uvicorn>=0.23.2,<1",
    # MQTT and core functionality
    "aiomqtt>=2.0,<3",
    "pydantic>=2.11.0,<3",
    "python-dotenv>=1.0.0,<2",
    "typing_extensions>=4.7.0,<5",
    "paho-mqtt>=1.6.1,<2",
    # Device-specific libraries (PyPI versions - Phase 1 migration)
    "broadlink>=0.18.0,<1",
    "pymotivaxmc2==0.6.7", # Migrated from Git to PyPI
    "asyncwebostv==0.3.4", # PyPI; v0.3.4 close-callback registry (auto-closes pointer socket on client.close); v0.3.3 pointer wire-format fixes + pointer_spec.md; v0.3.2 input_source derived from foreground_app + app_id_to_input_id helper; v0.3.1 = payload-contract fixes; v0.3.0 = subscription-lifecycle hardening
    # Network and HTTP libraries
    "websockets>=15.0.1,<16",
    "pyOpenSSL>=23.2.0,<27",
    "aiohttp>=3.8.1,<4",
    "httpx>=0.27.0,<1",
    "requests>=2.30.0,<3",
    # Data handling
    "pyyaml>=6.0,<7",
    "jsonschema>=4.4.0,<5",
    "aiosqlite>=0.19.0,<1",
    # Auralic device support (fork with ARM lxml fix, pinned to immutable SHA)
    "openhomedevice @ git+https://github.com/droman42/openhomedevice.git@6e862a1022f59a21c57c501dcf040f81d12ebfaf",
    # Apple TV support (migrated to PyPI — protobuf fix shipped in 0.16.1+)
    "pyatv==0.17.0",
    # Note: asyncio>=3.4.3 removed - built into Python 3.11+
    "psutil>=7.0.0,<8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.18.0", 
    "pytest-mock>=3.7.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "mypy>=0.9",
    "flake8>=3.9",
    "pysqlite3-binary>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/droman42/wb-mqtt-bridge"
Issues = "https://github.com/droman42/wb-mqtt-bridge/issues"

[project.scripts]
wb-mqtt-bridge = "wb_mqtt_bridge.app.main:main"
wb-api = "wb_mqtt_bridge.app.main:main"
wb-openapi = "wb_mqtt_bridge.cli.dump_openapi:main"
mqtt-sniffer = "wb_mqtt_bridge.cli.mqtt_sniffer:main"
device-test = "wb_mqtt_bridge.cli.device_test:main"
broadlink-cli = "wb_mqtt_bridge.cli.broadlink_cli:main"
broadlink-discovery = "wb_mqtt_bridge.cli.broadlink_discovery:main"

[project.entry-points."wb_mqtt_bridge.devices"]
lg_tv = "wb_mqtt_bridge.infrastructure.devices.lg_tv.driver:LgTv"
apple_tv = "wb_mqtt_bridge.infrastructure.devices.apple_tv.driver:AppleTVDevice"
auralic = "wb_mqtt_bridge.infrastructure.devices.auralic.driver:AuralicDevice"
emotiva_xmc2 = "wb_mqtt_bridge.infrastructure.devices.emotiva_xmc2.driver:EMotivaXMC2"
broadlink_hood = "wb_mqtt_bridge.infrastructure.devices.broadlink_kitchen_hood.driver:BroadlinkKitchenHood"
wirenboard_ir = "wb_mqtt_bridge.infrastructure.devices.wirenboard_ir_device.driver:WirenboardIRDevice"
revox_a77 = "wb_mqtt_bridge.infrastructure.devices.revox_a77_reel_to_reel.driver:RevoxA77ReelToReel"

[tool.setuptools]

# Simplified package structure
[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short"
markers = [
    "unit: pure unit test (no I/O, all mocked)",
    "integration: integration test with mocked externals (safe for CI)",
    "requires_mqtt: needs a running MQTT broker",
    "requires_device: needs real device hardware on the LAN",
    "slow: takes more than ~5 seconds",
]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

# UV-specific configuration
[tool.uv]
# Git sources for dependencies
[tool.uv.sources]
openhomedevice = { git = "https://github.com/droman42/openhomedevice.git", rev = "6e862a1022f59a21c57c501dcf040f81d12ebfaf" }
