[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wb-mqtt-bridge"
version = "0.5.0"
description = "A Python-based web service that acts as an MQTT client to manage multiple devices using a plugin-based architecture"
readme = "README.md"
authors = [
    {name = "Dmitri Romanovskij", email = "dmitri.romanovski@gmail.com"}
]
# Updated license format to SPDX per deprecation warning
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Home Automation",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.11"
dependencies = [
    # Core web framework
    "fastapi>=0.103.0,<1",
    "uvicorn>=0.23.2,<1",
    # MQTT and core functionality
    "aiomqtt>=2.0,<3",
    "pydantic>=2.11.0,<3",
    "python-dotenv>=1.0.0,<2",
    "typing_extensions>=4.7.0,<5",
    "paho-mqtt>=1.6.1,<2",
    # Device-specific libraries (PyPI versions - Phase 1 migration)
    "broadlink>=0.18.0,<1",
    "pymotivaxmc2==0.7.0", # PyPI; 0.7.0 pyright-clean public types + py.typed marker (consumer pyright sees real signatures, not Any); 0.6.9 subscribe() auto-dispatches initial values through registered @on(prop) callbacks + EmotivaController.subscribe waits for confirmation and returns the dict (handoff 2026-05-30); 0.6.8 adds select_source()/get_input_names() + configurable ack_timeout
    "asyncwebostv==0.4.0",  # PyPI; 0.4.0 facades (WebOSTV/SecureWebOSTV) in __all__ + shipped controls.pyi stubs → consumer pyright sees real signatures, drops the self.* : Any workarounds; 0.3.5 _close_callbacks fire on remote-side ConnectionClosed (silent WS death detection); 0.3.4 close-callback registry; 0.3.3 pointer wire-format fixes + pointer_spec.md; 0.3.2 input_source derived from foreground_app + app_id_to_input_id helper; 0.3.1 payload-contract fixes; 0.3.0 subscription-lifecycle hardening
    # Network and HTTP libraries
    "websockets>=15.0.1,<16",
    "pyOpenSSL>=23.2.0,<27",
    "aiohttp>=3.8.1,<4",
    "httpx>=0.27.0,<1",
    "requests>=2.30.0,<3",
    # Data handling
    "pyyaml>=6.0,<7",
    "jsonschema>=4.4.0,<5",
    "aiosqlite>=0.19.0,<1",
    # Auralic device support (fork with ARM lxml fix, pinned to immutable SHA).
    # Upstream 2.3.1 still hard-requires lxml>=4.8.0 (the ARM build problem) — the fork is
    # upstream 2.3.1 code minus lxml (stdlib ElementTree); do NOT move to upstream. 2026-05-29.
    # 2026-07-07 (DRV-14): fork also carries HardwareConfig halt support (is_halted/set_halt,
    # branch hardware-config-halt; PR'd upstream as bazwilliams/openhomedevice#26).
    "openhomedevice @ git+https://github.com/droman42/openhomedevice.git@75e8cfcec561ab1b884ce904517d941de9af8b4e",
    # openhomedevice's only runtime dep; pinned explicitly so a transitive bump can't reintroduce
    # the DIDL-Lite metadata-parse break (openhomedevice issue #23, async_upnp_client 0.39->0.40).
    "async_upnp_client>=0.40,<0.45",
    # Apple TV support. Pinned to a master SHA (not a release) because tvOS 26.4/26.5
    # silently drop Companion query commands (FetchAttentionState→power, app_list,
    # set_volume) unless a TVRCSessionStart handshake is sent at connect. That fix landed
    # on master via #2855 but is not in any release yet (0.17.0 predates it). Verified
    # against our tvOS 26.5 units. Move to the first release containing #2855 when it ships.
    # See pyatv issues #2845 / #2856 / #2823.
    "pyatv @ git+https://github.com/postlund/pyatv@9177803dec6a165d4610d5d63fe09562820fccdb",
    # Note: asyncio>=3.4.3 removed - built into Python 3.11+
    "psutil>=7.0.0,<8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.18.0",
    "pytest-mock>=3.7.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "mypy>=0.9",
    "flake8>=3.9",
    "pysqlite3-binary>=0.5.0",
    "import-linter>=2.0",
    "pyright==1.1.410",
    "py-dev-gates @ git+https://github.com/droman42/py-dev-gates@v0.1.1",
]

[project.urls]
Homepage = "https://github.com/droman42/wb-mqtt-bridge"
Issues = "https://github.com/droman42/wb-mqtt-bridge/issues"

[project.scripts]
wb-mqtt-bridge = "wb_mqtt_bridge.app.main:main"
wb-api = "wb_mqtt_bridge.app.main:main"
wb-openapi = "wb_mqtt_bridge.cli.dump_openapi:main"
wb-catalog = "wb_mqtt_bridge.cli.dump_catalog:main"
mqtt-sniffer = "wb_mqtt_bridge.cli.mqtt_sniffer:main"
device-test = "wb_mqtt_bridge.cli.device_test:main"
broadlink-cli = "wb_mqtt_bridge.cli.broadlink_cli:main"
broadlink-discovery = "wb_mqtt_bridge.cli.broadlink_discovery:main"

[project.entry-points."wb_mqtt_bridge.devices"]
lg_tv = "wb_mqtt_bridge.infrastructure.devices.lg_tv.driver:LgTv"
apple_tv = "wb_mqtt_bridge.infrastructure.devices.apple_tv.driver:AppleTVDevice"
auralic = "wb_mqtt_bridge.infrastructure.devices.auralic.driver:AuralicDevice"
emotiva_xmc2 = "wb_mqtt_bridge.infrastructure.devices.emotiva_xmc2.driver:EMotivaXMC2"
broadlink_hood = "wb_mqtt_bridge.infrastructure.devices.broadlink_kitchen_hood.driver:BroadlinkKitchenHood"
wirenboard_ir = "wb_mqtt_bridge.infrastructure.devices.wirenboard_ir_device.driver:WirenboardIRDevice"
revox_a77 = "wb_mqtt_bridge.infrastructure.devices.revox_a77_reel_to_reel.driver:RevoxA77ReelToReel"
wb_passthrough = "wb_mqtt_bridge.infrastructure.devices.wb_passthrough.driver:WbPassthroughDevice"

[tool.setuptools]

# Simplified package structure
[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short"
markers = [
    "unit: pure unit test (no I/O, all mocked)",
    "integration: integration test with mocked externals (safe for CI)",
    "requires_mqtt: needs a running MQTT broker",
    "requires_device: needs real device hardware on the LAN",
    "slow: takes more than ~5 seconds",
]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

# --------------------------------------------------------------------
# import-linter — hexagonal layering enforced. The "every change preserves
# hexagonal layering" LAW (docs/action_plan_journal.md 2026-05-25 / 2026-05-27)
# now has a CI gate. Run locally with: lint-imports (from backend/).
# --------------------------------------------------------------------
[tool.importlinter]
root_packages = ["wb_mqtt_bridge"]

[[tool.importlinter.contracts]]
name = "Domain depends on nothing outward"
type = "forbidden"
source_modules = ["wb_mqtt_bridge.domain"]
forbidden_modules = [
    "wb_mqtt_bridge.infrastructure",
    "wb_mqtt_bridge.presentation",
    "wb_mqtt_bridge.app",
    "wb_mqtt_bridge.cli",
]

[[tool.importlinter.contracts]]
name = "Infrastructure does not import presentation, the composition root, or the CLI"
type = "forbidden"
source_modules = ["wb_mqtt_bridge.infrastructure"]
forbidden_modules = [
    "wb_mqtt_bridge.presentation",
    "wb_mqtt_bridge.app",
    "wb_mqtt_bridge.cli",
]

[[tool.importlinter.contracts]]
name = "Presentation does not import the composition root or the CLI"
type = "forbidden"
source_modules = ["wb_mqtt_bridge.presentation"]
forbidden_modules = [
    "wb_mqtt_bridge.app",
    "wb_mqtt_bridge.cli",
]

[[tool.importlinter.contracts]]
# The foundation layer: pure cross-cutting code, importable from anywhere,
# importing nothing above it. (CORE-6: utils/types.py -- domain vocabulary --
# moved to domain/devices/types.py, and utils/validation.py -- config-file
# validation -- moved to infrastructure/config/validation.py, which broke the
# domain <-> utils package cycle this contract now prevents from returning.)
name = "Utils (foundation) depends on nothing upward"
type = "forbidden"
source_modules = ["wb_mqtt_bridge.utils"]
forbidden_modules = [
    "wb_mqtt_bridge.domain",
    "wb_mqtt_bridge.infrastructure",
    "wb_mqtt_bridge.presentation",
    "wb_mqtt_bridge.app",
    "wb_mqtt_bridge.cli",
]

[[tool.importlinter.contracts]]
# Each device driver is a self-contained adapter behind DevicePort; shared code
# belongs in infrastructure.devices.base (not listed here, so importing it is
# fine), never in a sibling driver.
name = "Device drivers are independent of each other"
type = "independence"
modules = [
    "wb_mqtt_bridge.infrastructure.devices.apple_tv",
    "wb_mqtt_bridge.infrastructure.devices.auralic",
    "wb_mqtt_bridge.infrastructure.devices.broadlink_kitchen_hood",
    "wb_mqtt_bridge.infrastructure.devices.emotiva_xmc2",
    "wb_mqtt_bridge.infrastructure.devices.lg_tv",
    "wb_mqtt_bridge.infrastructure.devices.revox_a77_reel_to_reel",
    "wb_mqtt_bridge.infrastructure.devices.wb_passthrough",
    "wb_mqtt_bridge.infrastructure.devices.wirenboard_ir_device",
]

[[tool.importlinter.contracts]]
name = "Presentation does not reach into infrastructure adapters (one documented exception)"
type = "forbidden"
source_modules = ["wb_mqtt_bridge.presentation"]
forbidden_modules = ["wb_mqtt_bridge.infrastructure"]
# Documented exception: POST /reload constructs an MQTTClient directly and drives
# its client-specific reconnect methods (stop / connect_and_subscribe /
# wait_for_connection). The clean fix (extract an application-layer reload service)
# is deferred -- the reload path touches live MQTT reconnect and can't be safely
# HW-verified without the user at the rack. Tracked in docs/action_plan.md §5.1.
# See docs/architecture/overview.md "The boundary, in practice".
ignore_imports = [
    "wb_mqtt_bridge.presentation.api.routers.system -> wb_mqtt_bridge.infrastructure.mqtt.client",
]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

# UV-specific configuration
[tool.uv]
# Git sources for dependencies
[tool.uv.sources]
openhomedevice = { git = "https://github.com/droman42/openhomedevice.git", rev = "75e8cfcec561ab1b884ce904517d941de9af8b4e" }
